--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <p class="lead mb-5">Experience with software development, working as a freelancer and as a team.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/eduardo-silveira-8445221ba/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/64651585" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
@@ -60,19 +60,28 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Developer Junior</h3>
-                            <div class="subheading mb-3">Scientific research</div>
-                            <p>Development of platform for remote education. In this activity I developed using docker, docker-compose, javascrip and Ruby.
+                            <h3 class="mb-0">Developer Full Stack Ruby on Rails</h3>
+                            <div class="subheading mb-3">Intern</div>
+                            <p>Legacy code maintenance. In this activity I developed using HTML5, CSS3, javascrip, GIT, PostgreSQL, Docker and Ruby on Rails.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Developer Junior</h3>
+                            <h3 class="mb-0">Developer Full Stack Ruby on Rails</h3>
                             <div class="subheading mb-3">Scientific research</div>
-                            <p>Development front-end platform using HTML5, CSS3 and JavaScript.
+                            <p>Development of platform for remote education. In this activity I developed using HTML5, CSS3, javascrip, GIT, PostgreSQL, Docker and Ruby on Rails.
                             </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - September 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Developer Full Stack </h3>
+                            <div class="subheading mb-3">Freelancer</div>
+                            <p>Development using HTML5, CSS3, JavaScript, Python and C#.</p>
+                            <p>And the frameworks ASP.NET Core, Bootstrap and Sass.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2020 - April 2021</span></div>
                     </div>
@@ -115,6 +124,10 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
+                            GIT
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
                             Ruby
                         </li>
                         <li>
@@ -124,6 +137,14 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Python
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Docker
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Linux
                         </li>
                     </ul> <br />
                     <div class="subheading mb-3">Frameworks</div>
