update some personal informations

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                         <span class="text-primary">Eduardo Silveira</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Porto Alegre - RS, Brazil · +55 (51) 99295-6782 ·
+                        Porto Alegre - RS, Brazil · +55 (51) 99369-6672 ·
                         <a href="mailto:name@email.com">eduardoksa@protonmail.ch</a>
                     </div>
-                    <p class="lead mb-5">Experience with software development, working as a freelancer and as a team.</p>
+                    <p class="lead mb-5">Software development and ex-scientist.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/eduardo-silveira-8445221ba/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/64651585" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/eduardoksa" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -61,11 +61,19 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Developer Full Stack Ruby on Rails</h3>
+                            <div class="subheading mb-3">Software Engineer</div>
+                            <p>Ruby on Rails, Javascript, Postgres, RSpec, Docker and Linux.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2022 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Developer Full Stack Ruby on Rails</h3>
                             <div class="subheading mb-3">Intern</div>
                             <p>Legacy code maintenance. In this activity I developed using HTML5, CSS3, javascrip, GIT, PostgreSQL, Docker and Ruby on Rails.
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - August 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -76,15 +84,6 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2021 - September 2021</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Developer Full Stack </h3>
-                            <div class="subheading mb-3">Freelancer</div>
-                            <p>Development using HTML5, CSS3, JavaScript, Python and C#.</p>
-                            <p>And the frameworks ASP.NET Core, Bootstrap and Sass.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2020 - April 2021</span></div>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -94,12 +93,11 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Open Source Society University</h3>
-                            <div class="subheading mb-3">Bachelor of computer Science</div>
-                            <div>Computer Science - Software Engineering</div>
+                            <h3 class="mb-0">System Analysis and Development</h3>
+                            <div class="subheading mb-3">UniDomBosco</div>
                             <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - December 2025</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2019 - August 2022</span></div>
                     </div>
                 </div>
             </section>
@@ -132,10 +130,6 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            C#
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
                             Python
                         </li>
                         <li>
@@ -156,10 +150,6 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Ruby on Rails
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            ASP.NET Core MVC
                         </li>
                     </ul>
                 </div>
